# IGP2

./: .gitignore  LICENSE  LICENSE.txt  README.md  environment.yml  predsH.p  pyproject.toml  requirements.txt  requirements_win64.txt  setup.py
.github/workflows/: sphinx.yml
docs/: Makefile  changelog.md  commandline_options.md  conf.py  configuration_file.md  custom_scenarios.md  first_steps.md  goal_recognition.md  home.md  index.rst  installation.md  new_behaviour.md  overwrite_mcts.md  requirements.txt  road_layout.md  useful_links.md
docs/api/: igp2.agents.rst  igp2.carlasim.rst  igp2.core.rst  igp2.data.rst  igp2.opendrive.elements.rst  igp2.planlibrary.rst  igp2.planning.rst  igp2.rst  igp2.simcarla.rst  igp2.simplesim.rst  igp2.simsimple.rst  module_graph.rst  modules.rst
docs/markdown/: api.md  configuration_file.md  custom_scenarios.md  first_steps.md  goal_recognition.md  home.md  installation.md  useful_links.md
docs/source/: commandline_options.md  conf.py  goal_recognition.md  index.rst  useful_links.md
gui/: map_vis_lanelet2.py  run_result_track_visualization.py  run_track_visualization.py  track_result_visualizer.py  track_visualizer.py  tracks_import.py
igp2/: __init__.py  agent.py  agentstate.py  config.py  cost.py  goal.py  results.py  trajectory.py  util.py  vehicle.py  velocitysmoother.py
igp2/agent/: agent.py  agentstate.py  macro_agent.py  maneuver_agent.py  mcts_agent.py  trajectory_agent.py
igp2/agents/: __init__.py  agent.py  agentstate.py  macro_agent.py  maneuver_agent.py  mcts_agent.py  traffic_agent.py  trajectory_agent.py
igp2/carla/: __init__.py  carla_agent_wrapper.py  carla_client.py  controller.py  local_planner.py  traffic_agent.py  traffic_manager.py  util.py  visualisation.py
igp2/carlasim/: carla_agent_wrapper.py  carla_client.py  controller.py  local_planner.py  traffic_manager.py  visualisation.py
igp2/core/: __init__.py  agentstate.py  config.py  cost.py  goal.py  results.py  trajectory.py  util.py  vehicle.py  velocitysmoother.py
igp2/data/: __init__.py  data_loaders.py  episode.py  scenario.py
igp2/opendrive/: __init__.py  map.py  parser.py  plot_map.py
igp2/planlibrary/: __init__.py  controller.py  macro_action.py  maneuver.py  maneuver_agent.py  maneuver_cl.py
igp2/planning/: __init__.py  mcts.py  mctsaction.py  node.py  policy.py  reward.py  rollout.py  simulator.py  tree.py
igp2/recognition/: __init__.py  astar.py  goalprobabilities.py  goalrecognition.py
igp2/simcarla/: carla_agent_wrapper.py  carla_client.py  controller.py  local_planner.py  traffic_manager.py  util.py  visualisation.py
igp2/simplesim/: __init__.py  plot_simulation.py  simulation.py  simulation_env.py
scenarios/: bendplatz.xodr  frankenberg.xodr  heckstrasse.xodr  test.xodr
scripts/: genconfig.py  run.py  util.py
tests/: test_astar.py  test_goal_recognition.py  test_macro_action.py  test_maneuver.py  test_map.py  test_mcts_agent.py  test_velocity_smoothing.py
(+89 files in other folders)
