[project]
name = "igp2"
version = "0.3.1"
description = "Open-source implementation of the goal recognition and motion planning algorithm IGP2 from the paper: Interpretable Goal-based Prediction and Planning for Autonomous Driving"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Balint Gyevnar", email = "balint.gyevnar@ed.ac.uk"},
  {name = "Cillian Brewitt"},
  {name = "Samuel Garcin"},
  {name = "Massimiliano Tamborski"},
  {name = "Stefano Albrecht"}
]
maintainers = [
  {name = "Balint Gyevnar", email = "balint.gyevnar@ed.ac.uk"}
]
dependencies = [
    "casadi~=3.6.1",
    "dill~=0.3.6",
    "imageio~=2.28.0",
    "loguru~=0.7.0",
    "lxml~=4.9.2",
    "matplotlib~=3.7.1",
    "more-itertools~=9.1.0",
    "numpy~=1.24.2",
    "pandas~=2.0.0",
    "psutil~=5.9.5",
    "pygame~=2.3.0",
    "pytest==7.3.1",
    "scipy~=1.10.1",
    "setuptools~=66.0.0",
    "shapely==2.0.1",
]

[project.optional-dependencies]
carla = [
  "carla>=0.9.13"
]
